# RoadWatch-Qatar-AI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.api  Dockerfile.dashboard  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
configs/: rdd2022.yaml
docs/: api.md  architecture.md  data-card.md  deployment.md  model-card.md
models/: README.md
scripts/: download_rdd2022.py  evaluate.py  export_model.py  prepare_rdd2022.py  train.py
src/roadwatch/: __init__.py  cli.py  config.py  exceptions.py
src/roadwatch/api/: __init__.py  app.py
src/roadwatch/dashboard/: __init__.py  app.py  client.py
src/roadwatch/domain/: __init__.py  models.py  severity.py
src/roadwatch/services/: __init__.py  detector.py  image_io.py  reporting.py
src/roadwatch/storage/: __init__.py  database.py
src/roadwatch/training/: __init__.py  rdd2022.py
tests/: conftest.py  test_api.py  test_dashboard_client.py  test_detector.py  test_domain.py  test_image_io.py  test_rdd2022.py  test_reporting.py  test_storage.py
